--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
     <h2 id="company">矢動丸プロジェクトについて</h2>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled.png" alt="矢動丸プロジェクトロゴ">
 
+
+    
     <h3>テレビ番組「賢者の選択」シリーズ制作実績</h3>
     <ul>
         <li>2004年～：「賢者の選択」ビジネス対談番組の先駆けとして放送開始</li>
@@ -106,6 +108,8 @@
     </ul>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%201.png" alt="賢者の選択ロゴ">
 
+
+    
     <h3>2022年：事業承継に特化した「賢者の選択サクセッション」開始</h3>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%202.png" alt="サクセッションロゴ">
 
@@ -114,19 +118,19 @@
 
     <h3>阿部幸製菓株式会社の最近の動向</h3>
     <ul>
-        <li>新本社ミュージアム設立：企業の歴史と文化を伝える場として</li>
         <li>事業拡大：浪花屋製菓の買収による事業領域の拡大</li>
+        <li>ミュージアム設立：企業の歴史と文化を伝える場として</li>
     </ul>
 
     <h3>動画制作の目的</h3>
     <ol>
-        <li>ミュージアムで放送するVTR制作
+        <li>ミュージアムで放送する映像制作
             <ul>
                 <li>元祖柿の種としての会社の歴史、製品の特徴を紹介</li>
                 <li>来訪者に深い理解と印象を与える</li>
             </ul>
         </li>
-        <li>阿部幸および阿部社長自身のブランディング強化
+        <li>阿部幸および阿部社長自身のブランディング強化（オプション/ご提案要素）
             <ul>
                 <li>新潟を代表する革新的な企業としてのイメージ構築</li>
                 <li>阿部社長の経営哲学や将来ビジョンの発信</li>
@@ -156,7 +160,7 @@
                 <li>製造プロセスや商品ラインナップの魅力的な紹介</li>
             </ul>
         </li>
-        <li>ガイアの夜明けの制作スタッフによる入念な取材と制作プロセス</li>
+        <li>ガイアの夜明け等ビジネス番組の制作スタッフによる入念な取材と制作プロセス</li>
         <li>会社の歴史、製品、企業理念を網羅的に紹介</li>
     </ul>
     <p>※予算については、取材量、撮影日数、制作スタッフにより柔軟に調整が可能です。</p>
