--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>阿部幸製菓株式会社 動画制作提案</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+            font-family: 'Noto Sans JP', sans-serif;
             line-height: 1.6;
             color: #333;
             max-width: 900px;
@@ -21,14 +22,14 @@
         h1 {
             border-bottom: 2px solid #3f51b5;
             padding-bottom: 10px;
-            font-size: 2.5em;
+            font-size: 2.8em;
         }
         h2 {
             background-color: #3f51b5;
             color: white;
             padding: 10px 15px;
             border-radius: 5px;
-            font-size: 1.8em;
+            font-size: 2em;
         }
         .highlight-box {
             background-color: #e8eaf6;
@@ -80,6 +81,35 @@
         a:hover {
             text-decoration: underline;
         }
+        .large-text {
+            font-size: 1.2em;
+            font-weight: bold;
+        }
+        .section-title {
+            font-size: 1.5em;
+            font-weight: bold;
+            color: #1a237e;
+            margin-top: 1.5em;
+        }
+        .section-title::before {
+            content: "■ ";
+            color: #3f51b5;
+        }
+        .bold-text {
+            font-weight: bold;
+        }
+        .effect-highlight {
+            background-color: #e8eaf6;
+            padding: 15px;
+            border-radius: 5px;
+            margin: 10px 0;
+        }
+        .effect-highlight ul {
+            margin: 0;
+        }
+        .last-image {
+            margin-top: 50px;
+        }
     </style>
 </head>
 <body>
@@ -99,18 +129,14 @@
     <h2 id="company">矢動丸プロジェクトについて</h2>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled.png" alt="矢動丸プロジェクトロゴ">
 
-
-    
-    <h3>テレビ番組「賢者の選択」シリーズ制作実績</h3>
+    <h3 class="large-text">テレビ番組「賢者の選択」シリーズ制作実績</h3>
     <ul>
         <li>2004年～：「賢者の選択」ビジネス対談番組の先駆けとして放送開始</li>
         <li>これまでに1500名以上の企業リーダーが出演</li>
     </ul>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%201.png" alt="賢者の選択ロゴ">
 
-
-    
-    <h3>2022年：事業承継に特化した「賢者の選択サクセッション」開始</h3>
+    <h3 class="large-text">2022年：事業承継に特化した「賢者の選択サクセッション」開始</h3>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%202.png" alt="サクセッションロゴ">
 
     <h2 id="background">提案の背景と目的</h2>
@@ -118,19 +144,19 @@
 
     <h3>阿部幸製菓株式会社の最近の動向</h3>
     <ul>
+        <li>新本社ミュージアム設立：企業の歴史と文化を伝える場として</li>
         <li>事業拡大：浪花屋製菓の買収による事業領域の拡大</li>
-        <li>ミュージアム設立：企業の歴史と文化を伝える場として</li>
     </ul>
 
     <h3>動画制作の目的</h3>
     <ol>
-        <li>ミュージアムで放送する映像制作
+        <li>ミュージアムで放送するVTR制作
             <ul>
                 <li>元祖柿の種としての会社の歴史、製品の特徴を紹介</li>
                 <li>来訪者に深い理解と印象を与える</li>
             </ul>
         </li>
-        <li>阿部幸および阿部社長自身のブランディング強化（オプション/ご提案要素）
+        <li>阿部幸および阿部社長自身のブランディング強化
             <ul>
                 <li>新潟を代表する革新的な企業としてのイメージ構築</li>
                 <li>阿部社長の経営哲学や将来ビジョンの発信</li>
@@ -140,16 +166,16 @@
 
     <h2 id="overview">提案概要</h2>
     <div class="highlight-box">
-        <h3>提案1: 一般的な企業紹介動画制作</h3>
-        <p>費用：300万円前後（内容により応相談）</p>
+        <h3 class="large-text">提案1: 一般的な企業紹介動画制作</h3>
+        <p class="bold-text">費用：300万円前後（内容により応相談）</p>
 
-        <h3>提案2: 「賢者の選択サクセッション」出演＋ミュージアム用動画制作</h3>
-        <p>費用：500万円</p>
+        <h3 class="large-text">提案2: 「賢者の選択サクセッション」出演＋ミュージアム用動画制作</h3>
+        <p class="bold-text">費用：500万円</p>
         <p><strong>※推奨プラン</strong></p>
     </div>
 
     <h2 id="details">提案詳細</h2>
-    <h3>提案1: 一般的な企業紹介動画制作</h3>
+    <h3 class="large-text">提案1: 一般的な企業紹介動画制作</h3>
     <p>プロフェッショナルな制作チームによる高品質な企業紹介動画</p>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%204.png" alt="企業紹介動画イメージ">
     <ul>
@@ -160,13 +186,13 @@
                 <li>製造プロセスや商品ラインナップの魅力的な紹介</li>
             </ul>
         </li>
-        <li>ガイアの夜明け等ビジネス番組の制作スタッフによる入念な取材と制作プロセス</li>
+        <li>ガイアの夜明けの制作スタッフによる入念な取材と制作プロセス</li>
         <li>会社の歴史、製品、企業理念を網羅的に紹介</li>
     </ul>
     <p>※予算については、取材量、撮影日数、制作スタッフにより柔軟に調整が可能です。</p>
 
-    <h3>提案2: 「賢者の選択サクセッション」出演＋ミュージアム用動画制作</h3>
-    <h4>テレビ番組出演</h4>
+    <h3 class="large-text">提案2: 「賢者の選択サクセッション」出演＋ミュージアム用動画制作</h3>
+    <h4 class="section-title">テレビ番組出演</h4>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/cb296211-552c-427a-8c15-1356afff05b5.png" alt="入山教授との対談イメージ">
     <ul>
         <li>入山章栄教授との対談形式</li>
@@ -175,14 +201,14 @@
         <li>浪花屋製菓の買収と今後の展望</li>
     </ul>
 
-    <h4>ミュージアム用動画制作</h4>
+<h4 class="section-title">ミュージアム用動画制作</h4>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%205.png" alt="ミュージアム動画イメージ">
     <ul>
         <li>テレビ番組取材過程での撮影素材を活用して制作</li>
         <li>来館者向けに最適化された情報構成</li>
     </ul>
 
-    <h4>メリット</h4>
+    <h4 class="section-title">メリット</h4>
     <ul>
         <li>入山章栄教授との対談によるブランディング向上</li>
         <li>著名企業（星野リゾート、ジャパネットなど）と並ぶ露出効果</li>
@@ -192,7 +218,7 @@
         <li>新潟における若手イノベーティブ経営者としての象徴化</li>
     </ul>
 
-    <h4>想定されるリーチと費用対効果</h4>
+    <h4 class="section-title">想定されるリーチと費用対効果</h4>
     <table>
         <tr>
             <th>メディア/コンテンツ</th>
@@ -265,33 +291,35 @@
     </table>
 
     <h2 id="effects">期待される効果</h2>
-    <ul>
-        <li>ブランド認知度の向上
-            <ul>
-                <li>ビジネスエリート層への知名度アップ</li>
-                <li>「柿の種」だけでなく、新潟の次世代を担う企業としてのイメージ構築</li>
-                <li>全国規模での知名度アップ</li>
-            </ul>
-        </li>
-        <li>経営者としての阿部社長の知名度向上
-            <ul>
-                <li>ビジネスリーダーとしての評価向上</li>
-                <li>メディアからの注目度アップ</li>
-            </ul>
-        </li>
-        <li>新潟地域でのプレゼンス強化
-            <ul>
-                <li>地域経済のけん引役としての認識確立</li>
-                <li>地元での雇用や経済活動への貢献をアピール</li>
-            </ul>
-        </li>
-        <li>今後のビジネス展開やM&Aにおける優位性獲得
-            <ul>
-                <li>新規取引先や提携先からの信頼獲得</li>
-                <li>M&A時の企業価値向上</li>
-            </ul>
-        </li>
-    </ul>
+    <div class="effect-highlight">
+        <ul>
+            <li>ブランド認知度の向上
+                <ul>
+                    <li>ビジネスエリート層への知名度アップ</li>
+                    <li>「柿の種」だけでなく、新潟の次世代を担う企業としてのイメージ構築</li>
+                    <li>全国規模での知名度アップ</li>
+                </ul>
+            </li>
+            <li>経営者としての阿部社長の知名度向上
+                <ul>
+                    <li>ビジネスリーダーとしての評価向上</li>
+                    <li>メディアからの注目度アップ</li>
+                </ul>
+            </li>
+            <li>新潟地域でのプレゼンス強化
+                <ul>
+                    <li>地域経済のけん引役としての認識確立</li>
+                    <li>地元での雇用や経済活動への貢献をアピール</li>
+                </ul>
+            </li>
+            <li>今後のビジネス展開やM&Aにおける優位性獲得
+                <ul>
+                    <li>新規取引先や提携先からの信頼獲得</li>
+                    <li>M&A時の企業価値向上</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 
     <h2 id="summary">まとめ</h2>
     <p>提案2（推奨プラン）は、テレビ番組出演とミュージアム用動画制作を組み合わせることで、最大の効果を生み出します。長期的な企業価値向上に大きく貢献する戦略的なアプローチです。</p>
@@ -324,7 +352,9 @@
 
     <p>阿部幸製菓株式会社の更なる成長と発展に向けて、本企画が大きな一歩となることを確信しております。ご検討のほど、どうぞよろしくお願い申し上げます。</p>
 
-    <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%206.png" alt="矢動丸プロジェクト代表 前田">
+    <br><br>
+
+    <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%206.png" alt="矢動丸プロジェクト代表 前田" class="last-image">
 
 </body>
 </html>
