--- a/index.html
+++ b/index.html
@@ -144,19 +144,19 @@
 
     <h3>阿部幸製菓株式会社の最近の動向</h3>
     <ul>
-        <li>新本社ミュージアム設立：企業の歴史と文化を伝える場として</li>
         <li>事業拡大：浪花屋製菓の買収による事業領域の拡大</li>
+        <li>ミュージアム設立：企業の歴史と文化を伝える場として</li>
     </ul>
 
     <h3>動画制作の目的</h3>
     <ol>
-        <li>ミュージアムで放送するVTR制作
+        <li>ミュージアムで放送する映像制作
             <ul>
                 <li>元祖柿の種としての会社の歴史、製品の特徴を紹介</li>
                 <li>来訪者に深い理解と印象を与える</li>
             </ul>
         </li>
-        <li>阿部幸および阿部社長自身のブランディング強化
+        <li>阿部幸および阿部社長自身のブランディング強化（弊社提案要素）
             <ul>
                 <li>新潟を代表する革新的な企業としてのイメージ構築</li>
                 <li>阿部社長の経営哲学や将来ビジョンの発信</li>
@@ -186,7 +186,7 @@
                 <li>製造プロセスや商品ラインナップの魅力的な紹介</li>
             </ul>
         </li>
-        <li>ガイアの夜明けの制作スタッフによる入念な取材と制作プロセス</li>
+        <li>「ガイアの夜明け」の制作スタッフによる入念な取材と制作プロセス</li>
         <li>会社の歴史、製品、企業理念を網羅的に紹介</li>
     </ul>
     <p>※予算については、取材量、撮影日数、制作スタッフにより柔軟に調整が可能です。</p>
