--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
     <h2 id="company">矢動丸プロジェクトについて</h2>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled.png" alt="矢動丸プロジェクトロゴ">
 
-    <h3 class="large-text">テレビ番組「賢者の選択」シリーズ制作実績</h3>
+    <h3 class="large-text">■テレビ番組「賢者の選択」シリーズ制作実績</h3>
     <ul>
         <li>2004年～：「賢者の選択」ビジネス対談番組の先駆けとして放送開始</li>
         <li>これまでに1500名以上の企業リーダーが出演</li>
     </ul>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%201.png" alt="賢者の選択ロゴ">
 
-    <h3 class="large-text">2022年：事業承継に特化した「賢者の選択サクセッション」開始</h3>
+    <h3 class="large-text">■2022年：事業承継に特化した「賢者の選択サクセッション」開始</h3>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%202.png" alt="サクセッションロゴ">
 
     <h2 id="background">提案の背景と目的</h2>
