--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
     <h2 id="background">提案の背景と目的</h2>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%203.png" alt="阿部幸製菓イメージ">
 
-    <h3>阿部幸製菓株式会社の最近の動向</h3>
+    <h3>背景</h3>
     <ul>
-        <li>事業拡大：浪花屋製菓の買収による事業領域の拡大</li>
-        <li>ミュージアム設立：企業の歴史と文化を伝える場として</li>
+        <li>事業拡大：浪花屋製菓等の買収による事業領域の拡大</li>
+        <li>ミュージアム整備：企業の歴史と文化を伝える場として</li>
     </ul>
 
     <h3>動画制作の目的</h3>
@@ -166,7 +166,7 @@
 
     <h2 id="overview">提案概要</h2>
     <div class="highlight-box">
-        <h3 class="large-text">提案1: 一般的な企業紹介動画制作</h3>
+        <h3 class="large-text">提案1: フルカスタマイズの企業紹介動画制作</h3>
         <p class="bold-text">費用：300万円前後（内容により応相談）</p>
 
         <h3 class="large-text">提案2: 「賢者の選択サクセッション」出演＋ミュージアム用動画制作</h3>
@@ -175,7 +175,7 @@
     </div>
 
     <h2 id="details">提案詳細</h2>
-    <h3 class="large-text">提案1: 一般的な企業紹介動画制作</h3>
+    <h3 class="large-text">提案1: フルカスタマイズの企業紹介動画制作</h3>
     <p>プロフェッショナルな制作チームによる高品質な企業紹介動画</p>
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%204.png" alt="企業紹介動画イメージ">
     <ul>
