--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+    <div class="link-container">
+        <a href="https://news.yahoo.co.jp/media/k_success" class="styled-link" target="_blank">
+            <i class="fas fa-newspaper"></i>
+            賢者の選択サクセッションの記事一覧 - Yahoo!ニュース
+        </a>
+        <a href="https://www.youtube.com/@kenja-succession/featured" class="styled-link" target="_blank">
+            <i class="fab fa-youtube"></i>
+            賢者の選択サクセッション YouTubeチャンネル
+        </a>
+        <a href="https://forbesjapan.com/author/detail/2772" class="styled-link" target="_blank">
+            <i class="fas fa-trophy"></i>
+            賢者の選択 サクセッション | Forbes JAPAN 公式サイト
+        </a>
+    </div>
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -170,7 +185,7 @@
         <p class="bold-text">費用：300万円前後（内容により応相談）</p>
 
         <h3 class="large-text">提案2: 「賢者の選択サクセッション」出演＋ミュージアム用動画制作</h3>
-        <p class="bold-text">費用：500万円</p>
+        <p class="bold-text">費用：500万円（特別価格）</p>
         <p><strong>※推奨プラン</strong></p>
     </div>
 
@@ -228,7 +243,7 @@
         <tr>
             <td>テレビ番組放映（BS12/30分）</td>
             <td>想定視聴者数1万人</td>
-            <td>全国放送</td>
+            <td>全国放送/二時利用可能</td>
         </tr>
         <tr>
             <td>YouTubeアーカイブ</td>
@@ -252,7 +267,7 @@
         </tr>
         <tr>
             <td>企業紹介映像</td>
-            <td>納品</td>
+            <td>納品（制作費300万円相当）</td>
             <td></td>
         </tr>
     </table>
@@ -261,11 +276,26 @@
         <p><strong>費用対効果の試算：</strong></p>
         <ul>
             <li>記事広告の場合、PVあたり50-100円程度必要</li>
-            <li>広告費換算で150万～5,000万円の効果と推定</li>
+            <li>yahoo単体でも広告費換算で150万～5,000万円の効果と推定</li>
             <li>単純なTVクオリティで30分動画インタビューコンテンツ制作費とした場合、約400-500万円相当</li>
         </ul>
     </div>
 
+    <div class="link-container">
+        <a href="https://news.yahoo.co.jp/media/k_success" class="styled-link" target="_blank">
+            <i class="fas fa-newspaper"></i>
+            賢者の選択サクセッションの記事一覧 - Yahoo!ニュース
+        </a>
+        <a href="https://www.youtube.com/@kenja-succession/featured" class="styled-link" target="_blank">
+            <i class="fab fa-youtube"></i>
+            賢者の選択サクセッション YouTubeチャンネル
+        </a>
+        <a href="https://forbesjapan.com/author/detail/2772" class="styled-link" target="_blank">
+            <i class="fas fa-trophy"></i>
+            賢者の選択 サクセッション | Forbes JAPAN 公式サイト
+        </a>
+    </div>
+    
     <h2 id="cost">費用</h2>
     <table>
         <tr>
