--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
-    <div class="link-container">
-        <a href="https://news.yahoo.co.jp/media/k_success" class="styled-link" target="_blank">
-            <i class="fas fa-newspaper"></i>
-            賢者の選択サクセッションの記事一覧 - Yahoo!ニュース
-        </a>
-        <a href="https://www.youtube.com/@kenja-succession/featured" class="styled-link" target="_blank">
-            <i class="fab fa-youtube"></i>
-            賢者の選択サクセッション YouTubeチャンネル
-        </a>
-        <a href="https://forbesjapan.com/author/detail/2772" class="styled-link" target="_blank">
-            <i class="fas fa-trophy"></i>
-            賢者の選択 サクセッション | Forbes JAPAN 公式サイト
-        </a>
-    </div>
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -125,6 +110,34 @@
         .last-image {
             margin-top: 50px;
         }
+
+    .link-container {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        margin: 20px 0;
+    }
+    .styled-link {
+        display: flex;
+        align-items: center;
+        padding: 10px 15px;
+        background-color: #f0f0f0;
+        border-radius: 5px;
+        text-decoration: none;
+        color: #333;
+        transition: background-color 0.3s ease;
+    }
+    .styled-link:hover {
+        background-color: #e0e0e0;
+    }
+    .styled-link i {
+        margin-right: 10px;
+        font-size: 1.2em;
+        color: #3f51b5;
+    }
+</style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        
     </style>
 </head>
 <body>
