--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
         </tr>
         <tr>
             <td>企業紹介映像</td>
-            <td>納品（制作費300万円相当）</td>
-            <td></td>
+            <td>映像の納品</td>
+            <td>制作費300万円相当</td>
         </tr>
     </table>
     
