--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         </tr>
     </table>
 
-    <h2 id="effects">期待される効果</h2>
+    <h2 id="effects">番組出演により期待される効果</h2>
     <div class="effect-highlight">
         <ul>
             <li>ブランド認知度の向上
@@ -369,7 +369,7 @@
 
     <h3>提案2の推奨理由：</h3>
     <ul>
-        <li>コストパフォーマンスの高さ（テレビ出演＋ミュージアム用動画のセット）</li>
+        <li>コストパフォーマンスの高さ（ミュージアム用動画が実質無料）</li>
         <li>多角的な露出による相乗効果</li>
         <li>長期的な企業価値向上への貢献</li>
     </ul>
@@ -379,20 +379,13 @@
     </div>
 
     <h3>私たちの想い</h3>
-    <p>本番組を企画した矢動丸プロジェクト前田は、事業承継を機に新規事業への挑戦をすることで、本業のアセットを活かした成長を目指している立場です。ステークホルダー、地域経済、ひいては日本経済に貢献したいと考える次世代経営者に貢献したいとの思いで本サクセッション企画を推進しております。</p>
+    <p>矢動丸プロジェクトは、ステークホルダー、地域経済、ひいては日本経済に貢献したいと考える次世代経営者に貢献したいとの思いで本サクセッション企画を推進しております。</p>
 
-    <p>折に触れ阿部社長のお話を聞く中で、是非私どもの番組にご出演いただきたいと願いご提案しました。</p>
+    <p>折に触れ阿部社長のお話を聞く中で、是非私どもの番組に出演頂きたいと考え、ご提案しました。</p>
 
-    <p>私ども自身が、自社のリスクで制作している番組ですので、PR費用のご負担をお願いしますが、今回、動画制作を付帯メリットとして企画することで、コスト面でも競争力が十分にある内容であると考えております。</p>
+    <p>矢動丸プロジェクトが自社のリスクで制作している番組ですので、PR費用はご負担をお願いしますが、PR協力費を調整させて頂いた上で、動画制作を付帯メリットとして企画することで、コスト面でも競争力が相当ある内容であると考えております。</p>
 
-    <h3>次のステップ</h3>
-    <ol>
-        <li>詳細な企画内容についての打ち合わせ</li>
-        <li>撮影スケジュールの調整</li>
-        <li>インタビュー内容の事前準備</li>
-        <li>ミュージアム用動画の具体的な構成検討</li>
-    </ol>
-
+ 
     <p>阿部幸製菓株式会社の更なる成長と発展に向けて、本企画が大きな一歩となることを確信しております。ご検討のほど、どうぞよろしくお願い申し上げます。</p>
 
     <br><br>
