--- a/index.html
+++ b/index.html
@@ -387,9 +387,9 @@
     </div>
 
     <h3>私たちの想い</h3>
-    <p>矢動丸プロジェクトは、ステークホルダー、地域経済、ひいては日本経済に貢献したいと考える次世代経営者に貢献したいとの思いで本サクセッション企画を推進しております。</p>
+    <p>矢動丸プロジェクトは、ステークホルダー、地域経済、ひいては日本経済に貢献したいと考える次世代経営者と共に歩みたい。との思いで本サクセッション企画を推進しております。</p>
 
-    <p>折に触れ阿部社長のお話を聞く中で、是非私どもの番組に出演頂きたいと考え、ご提案しました。</p>
+    <p>折に触れ阿部社長のお話を聞く中で、是非私どもの番組に出演頂きたいと考え、この度ご提案させて頂きました。</p>
 
     <p>矢動丸プロジェクトが自社のリスクで制作している番組ですので、PR費用はご負担をお願いしますが、PR協力費を調整させて頂いた上で、動画制作を付帯メリットとして企画することで、コスト面でも競争力が相当ある内容であると考えております。</p>
 
