--- a/index.html
+++ b/index.html
@@ -396,6 +396,10 @@
  
     <p>阿部幸製菓株式会社の更なる成長と発展に向けて、本企画が大きな一歩となることを確信しております。ご検討のほど、どうぞよろしくお願い申し上げます。</p>
 
+    <p>株式会社矢動丸プロジェクト前田雄大</p>
+    <p>take@yadoumaru.co.jp</p>
+    <p>090-6917-9918</p>
+
     <br><br>
 
     <img src="%E9%98%BF%E9%83%A8%E5%B9%B8%E8%A3%BD%E8%8F%93%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE%20%E5%8B%95%E7%94%BB%E5%88%B6%E4%BD%9C%E6%8F%90%E6%A1%88%208b5b933de3de4168abdd2ae166c87d83/Untitled%206.png" alt="矢動丸プロジェクト代表 前田" class="last-image">
