--- a/index.html
+++ b/index.html
@@ -396,9 +396,10 @@
  
     <p>阿部幸製菓株式会社の更なる成長と発展に向けて、本企画が大きな一歩となることを確信しております。ご検討のほど、どうぞよろしくお願い申し上げます。</p>
 
-    <p>株式会社矢動丸プロジェクト前田雄大</p>
-    <p>take@yadoumaru.co.jp</p>
-    <p>090-6917-9918</p>
+    <p>株式会社矢動丸プロジェクト前田雄大<br>
+       090-6917-9918<br>
+       take@yadoumaru.co.jp</p>
+       
 
     <br><br>
 
