--- a/index.html
+++ b/index.html
@@ -394,11 +394,13 @@
     <p>矢動丸プロジェクトが自社のリスクで制作している番組ですので、PR費用はご負担をお願いしますが、PR協力費を調整させて頂いた上で、動画制作を付帯メリットとして企画することで、コスト面でも競争力が相当ある内容であると考えております。</p>
 
  
-    <p>阿部幸製菓株式会社の更なる成長と発展に向けて、本企画が大きな一歩となることを確信しております。ご検討のほど、どうぞよろしくお願い申し上げます。</p>
+    <p>阿部幸製菓株式会社の更なる成長と発展に向けて、本企画が大きな一歩となることを確信しております。<br>
+    　　前向きにご検討頂けますと幸いです。。</p>
 
     <br>
     
-    <p>株式会社矢動丸プロジェクト前田雄大<br>
+    <p>2024年6月26日<br>
+    　　株式会社矢動丸プロジェクト前田雄大<br>
        090-6917-9918<br>
        take@yadoumaru.co.jp</p>
        
